zetasql/parser/testdata/is_distinct.test
[default language_features=V_1_3_IS_DISTINCT]
SELECT 1 IS {{NOT|}} DISTINCT FROM 2;
--
ALTERNATION GROUP: NOT
--
QueryStatement [0-31] [SELECT 1 IS...DISTINCT FROM 2]
  Query [0-31] [SELECT 1 IS...DISTINCT FROM 2]
    Select [0-31] [SELECT 1 IS...DISTINCT FROM 2]
      SelectList [7-31] [1 IS NOT DISTINCT FROM 2]
        SelectColumn [7-31] [1 IS NOT DISTINCT FROM 2]
          BinaryExpression(IS NOT DISTINCT FROM) [7-31] [1 IS NOT DISTINCT FROM 2]
            IntLiteral(1) [7-8] [1]
            IntLiteral(2) [30-31] [2]
--
SELECT
  1 IS NOT DISTINCT FROM 2
--
ALTERNATION GROUP: <empty>
--
QueryStatement [0-28] [SELECT 1 IS  DISTINCT FROM 2]
  Query [0-28] [SELECT 1 IS  DISTINCT FROM 2]
    Select [0-28] [SELECT 1 IS  DISTINCT FROM 2]
      SelectList [7-28] [1 IS  DISTINCT FROM 2]
        SelectColumn [7-28] [1 IS  DISTINCT FROM 2]
          BinaryExpression(IS DISTINCT FROM) [7-28] [1 IS  DISTINCT FROM 2]
            IntLiteral(1) [7-8] [1]
            IntLiteral(2) [27-28] [2]
--
SELECT
  1 IS DISTINCT FROM 2
==

# + vs. DISTINCT
select 1 + 2 is {{NOT|}} distinct from NULL;
--
ALTERNATION GROUP: NOT
--
QueryStatement [0-38] [select 1 +...from NULL]
  Query [0-38] [select 1 +...from NULL]
    Select [0-38] [select 1 +...from NULL]
      SelectList [7-38] [1 + 2 is NOT...from NULL]
        SelectColumn [7-38] [1 + 2 is NOT...from NULL]
          BinaryExpression(IS NOT DISTINCT FROM) [7-38] [1 + 2 is NOT...from NULL]
            BinaryExpression(+) [7-12] [1 + 2]
              IntLiteral(1) [7-8] [1]
              IntLiteral(2) [11-12] [2]
            NullLiteral(NULL) [34-38] [NULL]
--
SELECT
  1 + 2 IS NOT DISTINCT FROM NULL
--
ALTERNATION GROUP: <empty>
--
QueryStatement [0-35] [select 1 +...from NULL]
  Query [0-35] [select 1 +...from NULL]
    Select [0-35] [select 1 +...from NULL]
      SelectList [7-35] [1 + 2 is  distinct from NULL]
        SelectColumn [7-35] [1 + 2 is  distinct from NULL]
          BinaryExpression(IS DISTINCT FROM) [7-35] [1 + 2 is  distinct from NULL]
            BinaryExpression(+) [7-12] [1 + 2]
              IntLiteral(1) [7-8] [1]
              IntLiteral(2) [11-12] [2]
            NullLiteral(NULL) [31-35] [NULL]
--
SELECT
  1 + 2 IS DISTINCT FROM NULL
==

# < vs. DISTINCT
select 1 < 2 is {{NOT|}} distinct from NULL;
--
ALTERNATION GROUP: NOT
--
ERROR: Syntax error: Unexpected keyword IS [at 1:14]
select 1 < 2 is NOT distinct from NULL;
             ^
--
ALTERNATION GROUP: <empty>
--
ERROR: Syntax error: Unexpected keyword IS [at 1:14]
select 1 < 2 is  distinct from NULL;
             ^
==

# BETWEEN vs. DISTINCT
select 1 BETWEEN 2 AND 3 is {{NOT|}} distinct from NULL;
--
ALTERNATION GROUP: NOT
--
ERROR: Syntax error: Unexpected keyword IS [at 1:26]
select 1 BETWEEN 2 AND 3 is NOT distinct from NULL;
                         ^
--
ALTERNATION GROUP: <empty>
--
ERROR: Syntax error: Unexpected keyword IS [at 1:26]
select 1 BETWEEN 2 AND 3 is  distinct from NULL;
                         ^
==

# Complex lhs/rhs expressions
SELECT 1 + 2 * 3 IS {{NOT|}} DISTINCT FROM (4 * 5 + 6 BETWEEN 7 AND 8);
--
ALTERNATION GROUP: NOT
--
QueryStatement [0-65] [SELECT 1 +...BETWEEN 7 AND 8)]
  Query [0-65] [SELECT 1 +...BETWEEN 7 AND 8)]
    Select [0-65] [SELECT 1 +...BETWEEN 7 AND 8)]
      SelectList [7-65] [1 + 2 * 3...BETWEEN 7 AND 8)]
        SelectColumn [7-65] [1 + 2 * 3...BETWEEN 7 AND 8)]
          BinaryExpression(IS NOT DISTINCT FROM) [7-65] [1 + 2 * 3...BETWEEN 7 AND 8)]
            BinaryExpression(+) [7-16] [1 + 2 * 3]
              IntLiteral(1) [7-8] [1]
              BinaryExpression(*) [11-16] [2 * 3]
                IntLiteral(2) [11-12] [2]
                IntLiteral(3) [15-16] [3]
            BetweenExpression(BETWEEN) [39-64] [4 * 5 + 6 BETWEEN 7 AND 8]
              BinaryExpression(+) [39-48] [4 * 5 + 6]
                BinaryExpression(*) [39-44] [4 * 5]
                  IntLiteral(4) [39-40] [4]
                  IntLiteral(5) [43-44] [5]
                IntLiteral(6) [47-48] [6]
              Location [49-56] [BETWEEN]
              IntLiteral(7) [57-58] [7]
              IntLiteral(8) [63-64] [8]
--
SELECT
  1 + 2 * 3 IS NOT DISTINCT FROM(4 * 5 + 6 BETWEEN 7 AND 8)
--
ALTERNATION GROUP: <empty>
--
QueryStatement [0-62] [SELECT 1 +...BETWEEN 7 AND 8)]
  Query [0-62] [SELECT 1 +...BETWEEN 7 AND 8)]
    Select [0-62] [SELECT 1 +...BETWEEN 7 AND 8)]
      SelectList [7-62] [1 + 2 * 3...BETWEEN 7 AND 8)]
        SelectColumn [7-62] [1 + 2 * 3...BETWEEN 7 AND 8)]
          BinaryExpression(IS DISTINCT FROM) [7-62] [1 + 2 * 3...BETWEEN 7 AND 8)]
            BinaryExpression(+) [7-16] [1 + 2 * 3]
              IntLiteral(1) [7-8] [1]
              BinaryExpression(*) [11-16] [2 * 3]
                IntLiteral(2) [11-12] [2]
                IntLiteral(3) [15-16] [3]
            BetweenExpression(BETWEEN) [36-61] [4 * 5 + 6 BETWEEN 7 AND 8]
              BinaryExpression(+) [36-45] [4 * 5 + 6]
                BinaryExpression(*) [36-41] [4 * 5]
                  IntLiteral(4) [36-37] [4]
                  IntLiteral(5) [40-41] [5]
                IntLiteral(6) [44-45] [6]
              Location [46-53] [BETWEEN]
              IntLiteral(7) [54-55] [7]
              IntLiteral(8) [60-61] [8]
--
SELECT
  1 + 2 * 3 IS DISTINCT FROM(4 * 5 + 6 BETWEEN 7 AND 8)
==

# Syntax error
SELECT 1 NOT DISTINCT FROM 2;
--
ERROR: Syntax error: Expected keyword BETWEEN or keyword IN or keyword LIKE but got keyword DISTINCT [at 1:14]
SELECT 1 NOT DISTINCT FROM 2;
             ^
==

# Syntax error
SELECT 1 IS NOT DISTINCT 2;
--
ERROR: Syntax error: Expected keyword FROM but got integer literal "2" [at 1:26]
SELECT 1 IS NOT DISTINCT 2;
                         ^
==

1 IS DISTINCT FROM 2 IS TRUE;
--
ERROR: Syntax error: Unexpected integer literal "1" [at 1:1]
1 IS DISTINCT FROM 2 IS TRUE;
^
==

# IS DISTINCT FROM as lhs of IS
SELECT (1 IS DISTINCT FROM 2) IS TRUE;
--
QueryStatement [0-37] [SELECT (1...2) IS TRUE]
  Query [0-37] [SELECT (1...2) IS TRUE]
    Select [0-37] [SELECT (1...2) IS TRUE]
      SelectList [7-37] [(1 IS DISTINCT FROM 2) IS TRUE]
        SelectColumn [7-37] [(1 IS DISTINCT FROM 2) IS TRUE]
          BinaryExpression(IS) [7-37] [(1 IS DISTINCT FROM 2) IS TRUE]
            BinaryExpression(IS DISTINCT FROM) [8-28] [1 IS DISTINCT FROM 2]
              IntLiteral(1) [8-9] [1]
              IntLiteral(2) [27-28] [2]
            BooleanLiteral(TRUE) [33-37] [TRUE]
--
SELECT
  (1 IS DISTINCT FROM 2) IS TRUE
==

# IS DISTINCT FROM as lhs and rhs of IS DISTINCT FROM
SELECT (1 IS DISTINCT FROM 2) IS DISTINCT FROM (3 IS DISTINCT FROM 4);
--
QueryStatement [0-69] [SELECT (1...DISTINCT FROM 4)]
  Query [0-69] [SELECT (1...DISTINCT FROM 4)]
    Select [0-69] [SELECT (1...DISTINCT FROM 4)]
      SelectList [7-69] [(1 IS DISTINCT...TINCT FROM 4)]
        SelectColumn [7-69] [(1 IS DISTINCT...TINCT FROM 4)]
          BinaryExpression(IS DISTINCT FROM) [7-69] [(1 IS DISTINCT...TINCT FROM 4)]
            BinaryExpression(IS DISTINCT FROM) [8-28] [1 IS DISTINCT FROM 2]
              IntLiteral(1) [8-9] [1]
              IntLiteral(2) [27-28] [2]
            BinaryExpression(IS DISTINCT FROM) [48-68] [3 IS DISTINCT FROM 4]
              IntLiteral(3) [48-49] [3]
              IntLiteral(4) [67-68] [4]
--
SELECT
  (1 IS DISTINCT FROM 2) IS DISTINCT FROM(3 IS DISTINCT FROM 4)
==

# IS DISTINCT FROM as lhs and rhs of IS DISTINCT FROM, no parens around rhs
SELECT (1 IS DISTINCT FROM 2) IS DISTINCT FROM 3 IS DISTINCT FROM 4;
--
ERROR: Syntax error: Unexpected keyword IS [at 1:50]
SELECT (1 IS DISTINCT FROM 2) IS DISTINCT FROM 3 IS DISTINCT FROM 4;
                                                 ^
==

# IS DISTINCT FROM as lhs and rhs of IS DISTINCT FROM, no parens around lhs
SELECT 1 IS DISTINCT FROM 2 IS DISTINCT FROM (3 IS DISTINCT FROM 4);
--
ERROR: Syntax error: Unexpected keyword IS [at 1:29]
SELECT 1 IS DISTINCT FROM 2 IS DISTINCT FROM (3 IS DISTINCT FROM 4);
                            ^
==

# IS DISTRICT FROM - feature disabled
[language_features=]
SELECT 1 IS {{NOT|}} DISTINCT FROM 2;
--
ALTERNATION GROUP: NOT
--
ERROR: IS DISTINCT FROM is not supported [at 1:17]
SELECT 1 IS NOT DISTINCT FROM 2;
                ^
--
ALTERNATION GROUP: <empty>
--
ERROR: IS DISTINCT FROM is not supported [at 1:10]
SELECT 1 IS  DISTINCT FROM 2;
         ^
